<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/sixteen_dp"
        android:layout_marginTop="@dimen/sixteen_dp"
        android:text="@string/state"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    
    <org.angmarch.views.NiceSpinner
        android:id="@+id/spinnerSelect"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/thirty_two_dp"
        android:layout_marginEnd="@dimen/thirty_two_dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toEndOf="@id/tvState"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/tvState"
        app:layout_constraintTop_toTopOf="@id/tvState"
        app:popupTextAlignment="start"
        />
    
    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/tvState"
        android:paddingBottom="@dimen/five_dp"
        android:paddingTop="@dimen/five_dp"
        >
        <RadioButton
            style="@style/CustomRadioButton"
            android:id="@+id/radioButtonNegative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/negative"/>
        <RadioButton
            style="@style/CustomRadioButton"
            android:id="@+id/radioButtonPostive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/postive"/>

        <RadioButton
            style="@style/CustomRadioButton"
            android:id="@+id/radioButtonDeath"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/death"/>
    </RadioGroup>

    <com.robinhood.spark.SparkView
        android:id="@+id/sparkView"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/six_dp"
        android:layout_height="@dimen/zero_dp"
        android:paddingTop="@dimen/sixteen_dp"
        android:paddingBottom="@dimen/eight_dp"
        android:background="@color/backgrounde"
        app:layout_constraintTop_toBottomOf="@id/radioGroup"
        app:layout_constraintBottom_toTopOf="@id/radioGroupTimeSelected"/>

    <RadioGroup
        android:id="@+id/radioGroupTimeSelected"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sixteen_dp"
        android:background="@color/backgrounde"
        android:paddingBottom="@dimen/eight_dp"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/tvDateLabel">


        <RadioButton
            style="@style/CustomRadioButton"
            android:id="@+id/radioButtonWeek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weak"/>
        <RadioButton
            style="@style/CustomRadioButton"
            android:id="@+id/radioButtonMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/month"/>

        <RadioButton
            style="@style/CustomRadioButton"
            android:id="@+id/radioButtonMax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/max"/>

    </RadioGroup>

    <TextView
        android:id="@+id/tvDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/eighty_dp"
        android:gravity="center"
        android:text="@string/hc_date"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:layout_marginStart="@dimen/sixteen_dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <com.robinhood.ticker.TickerView
        android:id="@+id/tickerView"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center"
        android:text="@string/_4_324"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:layout_marginStart="@dimen/sixteen_dp"
        app:layout_constraintStart_toEndOf="@id/tvDateLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    

</androidx.constraintlayout.widget.ConstraintLayout>